examples/test/testpolicy9580.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9580
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key45: value20
      key9: value47
      key46: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value30
          key33: value26
          key16: value12
      podSelector:
        matchLabels:
          key11: value1
          key30: value13
          key41: value1
